--- a/Reviews/ROPE/2020_63/2020_63_Review.org
+++ b/Reviews/ROPE/2020_63/2020_63_Review.org
@@ -104,17 +104,17 @@ The paper has four main sections. Section 2 analyzes the empirical literature an
 
 
 1. Section 2 reviews the empirical literature on residential investment and emphasizes its macroeconomic relevance. In this same section, different RES-related topics are discussed without theoretical mediation. For instance, orthodox and heterodox models are discussed altogether.
-   - For example, textcite:arestis_economic_2019 is mentioned in the same paragraph with orthodox scholars and there is any mediation between them (page 4)
+   - For example, textcite:arestis_economic_2019 is mentioned in the same paragraph with orthodox scholars and there is little mediation between them (page 4).
 2. Still in section 2, there are many references to section 3 in which the theoretical model is discussed. It would be better to anticipate this topic to clarify the empirical literature review (section 2).
 3. In this same section, there are some incompatibilities between empirical evidence discussed and the hypothesis employed. For example, the author(s) mention \citeauthor*{arestis_economic_2019}'s \citeyear{arestis_economic_2019} result in which the level of RES depends on real disposable income. However, on the following paragraph (page 4), the author(s) state(s) that RES may be considered as a NCCAE.
 
    - To be fair, there are few works that discuss if RES could be considered as an autonomous expenditure. That been said, it would be interesting to argue a little more about this topic.
-   - On page 2, it would be better to explicit NCCAE characteristic of RES in terms of wages (income generated from firms, as textcite:serrano_long_1995 does) instead of argue that RES moves independently of output.
-   - To prevent further criticisms (such as the previous one), the following sentence (page 7) could be anticipated (or even more emphasized): ``we do not try to provide a complete and thorough validation of autonomous demand-led growth models here''
+   - On page 2, it would be better to explicit NCCAE characteristic of RES in terms of wages (income generated from firms, as textcite:serrano_long_1995 does) instead of arguing that RES moves independently of output.
+   - To prevent critiques such as the previous one, the following sentence (page 7) could be anticipated (or even more emphasized): ``we do not try to provide a complete and thorough validation of autonomous demand-led growth models here''.
 
 4. Although the data and empirical strategy are discussed in section 4, there is no mention of why the US was chosen nor the time range adopted (1960-2019:2). Since the empirical review shows that the relevance of the RES is not restricted to the US nor to the Great Recession, the author(s) could elaborate more. Additionally, it would be interesting to present some RES-related stylized facts.
 
-5. Section 3 discuss the theoretical demand-led growth literature and emphasizes the compatibility with SSM model. In this section, the author(s) argues that RES can be treated as NCCAE, but there is no theoretical discussion about this.
+5. Section 3 discusses the theoretical demand-led growth literature and emphasizes the compatibility with SSM model. In this section, the author(s) argues that RES can be treated as NCCAE, but there is no theoretical discussion about this.
 
    - Additionally, from theoretical literature review, it is not clear that SSM literature investigates long-run (fully-adjusted position) relations. This discussion would clarify why RES could determine the GDP trend and not only the business cycle.
 
@@ -124,7 +124,7 @@ The paper has four main sections. Section 2 analyzes the empirical literature an
 
    - textcite:duesenberry_investment_1958, for instance, states that RES should evolve independently of output (/i.e./ is a NCCAE) mainly when investors speculate with real estate. Therefore, there are theoretical foundations for both autonomous and nonlinear relation between RES and GDP. That been said, I recommend a brief discussion on this in section 3.
 
-   - At the very beginning of section 4.4, is stated that (page 11): ``[E]conomic events, such as changes in the economic environment, changes in monetary and/or fiscal policy, etc., can create room for a nonlinear (rather than linear) relationship between RES and GDP.'' However, there is no such discussion on section 4.3. More precisely, it is mentioned (page 9) that the literature (without citing any scholar) ``has widely recognized that macroeconomic variables and processes have nonlinear structures''. At the end of this same paragraph, it is mentioned that: ``nonlinearity is endemic in the social sciences and that asymmetry is fundamental to the human condition''. This topic is no longer discussed and there is no further mediation to manuscript proposal.
+   - At the very beginning of section 4.4, it is stated that (page 11): ``[E]conomic events, such as changes in the economic environment, changes in monetary and/or fiscal policy, etc., can create room for a nonlinear (rather than linear) relationship between RES and GDP.'' However, there is no such discussion on section 4.3. More precisely, it is mentioned (page 9) that the literature (without citing any scholar) ``has widely recognized that macroeconomic variables and processes have nonlinear structures''. At the end of this same paragraph, it is mentioned that: ``nonlinearity is endemic in the social sciences and that asymmetry is fundamental to the human condition''. This topic is no longer discussed and there is no further mediation to manuscript proposal.
 
 8. Repeating the same quote  of \textcite[p.~71]{serrano_long_1995} (manuscript page 6), the following expenditures are supposed to be considered as autonomous: ``the consumption of capitalists; the discretionary consumption of richer workers that have some accumulated wealth and access to credit; [...]''. Besides controlling for some  NCCAE on the econometric model (section 5), there is no mention of the absence of autonomous consumption.
 
@@ -132,15 +132,15 @@ The paper has four main sections. Section 2 analyzes the empirical literature an
 
 9. Section 4 presents the empirical strategy adopted and discusses the chosen procedures formal and rigorously.  However, there is no mention of the (theoretical) expected parameter values (mentioned on page 18). I recommend a brief discussion about this in section 3.
 
-10. Both sections 4 and 5 do not specify whether RES and GDP are considered level or growth rate variables. On page 7 (section 4), for example, is unclear if RES is a percent change or a level variable. Table 1 suggests that all variables employed are level terms while Tables 4 and 5 suggest  the opposite (as well as pages 7,21-22).
+10. Both sections 4 and 5 do not specify whether RES and GDP are considered level or growth rate variables. On page 7 (section 4), for example, it is unclear if RES is a percent change or a level variable. Table 1 suggests that all variables employed are level terms while Tables 4 and 5 suggest  the opposite (as well as pages 7,21-22).
 
     - The script provided with this referee (data_checker.py) concludes that variables reported in Table 1 are in level terms. Additionally, this table is not mentioned in the manuscript. It would be interesting to reference this table and emphasize that variables are transformed into logarithms.
 
-11. Section 5 presents the results, but there is no comparison with the empirical evidence presented in section 2. This discussion would be interesting since textcite:huang_is_2020 also employ a frequency-domain framework in orthodox strands and report different results
+11. Section 5 presents the results, but there is no comparison with the empirical evidence presented in section 2. This discussion would be interesting since textcite:huang_is_2020 also employ a frequency-domain framework in orthodox strands and report different results.
 
-12. Finally, a friendly suggestion. In order to emphasize the econometric results and to follow the ``housing tradition'', the manuscript title could be: ``Housing is NOT ONLY the business cycle: a Luxemburg-Kalecki External Market empirical investigation for the United States (1960-2019)''
+12. Finally, a friendly suggestion. In order to emphasize the econometric results and to follow the ``housing tradition'', the manuscript title could be: ``Housing is NOT ONLY the business cycle: a Luxemburg-Kalecki External Market empirical investigation for the United States (1960-2019)''.
 
-    - Of course, this is an optional suggestion in order to explicitly describe what are the conclusions, time range, and theoretical literature adopted
+    - Of course, this is an optional suggestion in order to explicitly describe what are the conclusions, time range, and theoretical literature adopted.
 
 
 Considering the items discussed above, I recommend the *re-submission* of the manuscript.
